# Mini-Distributed-Training-Framework

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: release-publish.yml  release-tag.yml  tests.yml
benchmarks/: benchmark.py
core/: __init__.py  checkpoint.py  communication.py  parameter_server.py  worker.py
dashboard/: README.md  __init__.py  app.js  index.html  metrics.py  sample_metrics.json  server.py  style.css
docs/: README.md
examples/: linear_regression.py  mnist.py  tiny_gpt.py
models/: __init__.py  tiny_gpt.py
tests/: distributed_smoke.py  test_advanced_features.py  test_checkpoint.py  test_dashboard_server.py  test_distributed_trainer.py  test_imports.py  test_linear_regression.py
trainer/: __init__.py  distributed_trainer.py  trainer.py
