[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-distributed-training-framework"
version = "0.1.0"
description = "A small multiprocessing-based distributed training playground"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.26"]
authors = [{ name = "Vaibhav Viswanath" }]
keywords = ["distributed-training", "multiprocessing", "machine-learning", "tinygpt"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/vaibhavviji2809-eng/Mini-Distributed-Training-Framework"

[tool.setuptools]
include-package-data = true
package-dir = { "MiniDistributed" = "." }
packages = [
  "MiniDistributed",
  "MiniDistributed.core",
  "MiniDistributed.dashboard",
  "MiniDistributed.trainer",
  "MiniDistributed.models",
  "MiniDistributed.examples",
]

[tool.setuptools.package-data]
"MiniDistributed.dashboard" = ["*.html", "*.css", "*.js", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
